GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.24alpha5 :
    
        - dumpykota can now dump the complete database in XML 
          format.
          
    - 1.24alpha4 :
    
        - Added support for the SQLite3 backend.
          See pykota/initscripts/sqlite/README.sqlite
        
    - 1.24alpha3 :
    
        - Fix for mailandpopup.sh : smbstatus can't be run setuid, 
          so we regain priviledges before running an external 
          mailto directive.
        
    - 1.24alpha2 :
    
        - Introduce the "onbackenderror" directive in pykota.conf, to
          control if the user must be charged or not whenever a real
          CUPS backend fails. The default value is 'nocharge'.
          Set it to 'charge' if you think your users can cause a CUPS
          backend to fail.
          
        - Now mark original backends related problems as such in the 
          printing history. Modified printquota.cgi and pykota.css
          to make them be more visible.
          
    - 1.24alpha1 :
    
        - Fixed a problem which caused backend errors to be ignored.
        
        - The sample LDIF file now contains the two necessary user
          entries to have an LDAP PyKota Admin and an LDAP PyKota
          ReadOnly user. The sample configuration files were updated
          to contain the default passwords used in the LDIF file.
          
        - dumpykota is now more strict when checking arguments.   
        
    - 1.23 :
    
        - Many minor bug fixes and code cleaning.
        
        - Improved documentation.
        
        - Added Polish translation.
        
        - Improved French and Swedish translations.
        